--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -4,6 +4,13 @@ linux (3.12.0-5.13) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Upstream Kernel Changes ]
+
+  * rebase to v3.12.2
+    - LP: #1253636
+    - LP: #1250377
+    - LP: #1248465
+
  -- Tim Gardner <tim.gardner@canonical.com>  Mon, 02 Dec 2013 09:26:35 -0700
 
 linux (3.12.0-4.12) trusty; urgency=low
