--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -4,6 +4,11 @@ linux (3.12.0-6.14) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Upstream Kernel Changes ]
+
+  * rebase to v3.12.3
+    - LP: #1229361
+
  -- Tim Gardner <tim.gardner@canonical.com>  Tue, 03 Dec 2013 12:28:12 -0700
 
 linux (3.12.0-5.13) trusty; urgency=low
