--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -4,6 +4,10 @@ linux (3.12.0-7.15) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Upstream Kernel Changes ]
+
+  * rebase to v3.12.4
+
  -- Tim Gardner <tim.gardner@canonical.com>  Sun, 08 Dec 2013 10:22:23 -0700
 
 linux (3.12.0-6.14) trusty; urgency=low
